--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             --accent-glow: rgba(114, 137, 218, 0.6);
             --text-main: #ffffff;
             --text-muted: #b0b0b0;
-            --nav-bg: rgba(0, 0, 0, 0.4);
+            --nav-bg: rgba(0, 0, 0, 0.6);
         }
 
         /* 1. Ultra-Dynamic Background */
@@ -44,7 +44,7 @@
             50% { transform: scale(1.1); }
         }
 
-        /* 2. Animated Navbar */
+        /* 2. Expanding Navbar Logic */
         .nav-container {
             position: absolute;
             top: 30px;
@@ -56,30 +56,40 @@
 
         .navbar {
             background: var(--nav-bg);
-            backdrop-filter: blur(20px);
-            padding: 12px 30px;
+            backdrop-filter: blur(25px);
+            padding: 10px 15px;
             border-radius: 50px;
             display: flex;
             align-items: center;
-            gap: 25px;
+            gap: 0; /* Gap managed by expansion */
             border: 1px solid rgba(255, 255, 255, 0.1);
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
-            animation: navSlideDown 1s cubic-bezier(0.2, 0.8, 0.2, 1) forwards;
+            
+            /* Initial Compact State */
+            width: 80px; 
+            overflow: hidden;
+            transition: width 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275), 
+                        gap 0.5s ease, 
+                        padding 0.5s ease;
+            white-space: nowrap;
+            cursor: pointer;
         }
 
-        @keyframes navSlideDown {
-            from { transform: translateY(-100px); opacity: 0; }
-            to { transform: translateY(0); opacity: 1; }
+        .navbar:hover {
+            width: 420px; /* Expands to show text */
+            gap: 20px;
+            padding: 10px 25px;
         }
 
         .nav-logo {
             width: 30px;
             height: 30px;
             border-radius: 50%;
-            transition: transform 0.3s ease;
+            flex-shrink: 0;
+            transition: transform 0.5s ease;
         }
 
-        .nav-logo:hover { transform: rotate(360deg) scale(1.2); }
+        .navbar:hover .nav-logo { transform: rotate(360deg); }
 
         .nav-links {
             display: flex;
@@ -87,6 +97,16 @@
             list-style: none;
             margin: 0;
             padding: 0;
+            opacity: 0;
+            transform: translateX(-20px);
+            transition: opacity 0.3s ease, transform 0.4s ease;
+            pointer-events: none;
+        }
+
+        .navbar:hover .nav-links {
+            opacity: 1;
+            transform: translateX(0);
+            pointer-events: auto;
         }
 
         .nav-item {
@@ -95,16 +115,25 @@
             font-size: 0.95rem;
             font-weight: 600;
             transition: all 0.3s ease;
-            position: relative;
         }
 
         .nav-item:hover {
             color: #fff;
-            transform: scale(1.1);
             text-shadow: 0 0 8px var(--accent-glow);
         }
 
-        /* 3. Floating UI Animation */
+        .discord-icon {
+            margin-left: auto;
+            flex-shrink: 0;
+            display: flex;
+            align-items: center;
+            color: var(--text-muted);
+            transition: color 0.3s ease;
+        }
+
+        .navbar:hover .discord-icon { color: white; }
+
+        /* 3. Main Content & Animations */
         @keyframes float {
             0%, 100% { transform: translateY(0px); }
             50% { transform: translateY(-15px); }
@@ -116,7 +145,6 @@
             z-index: 10;
         }
 
-        /* 4. Text Glow & Shimmer */
         .brand {
             font-size: 6rem;
             font-weight: 900;
@@ -130,52 +158,7 @@
             filter: drop-shadow(0 0 15px rgba(255,255,255,0.3));
         }
 
-        @keyframes shine {
-            to { background-position: 200% center; }
-        }
-
-        /* 5. Staggered Entrance */
-        @keyframes revealPop {
-            0% { opacity: 0; transform: scale(0.8) translateY(30px); filter: blur(10px); }
-            100% { opacity: 1; transform: scale(1) translateY(0); filter: blur(0); }
-        }
-
-        .animate {
-            opacity: 0;
-            animation: revealPop 0.8s cubic-bezier(0.34, 1.56, 0.64, 1) forwards;
-        }
-
-        .delay-1 { animation-delay: 0.4s; }
-        .delay-2 { animation-delay: 0.6s; }
-        .delay-3 { animation-delay: 0.8s; }
-
-        /* Buttons with Hover Ripple */
-        .btn-group {
-            display: flex;
-            justify-content: center;
-            gap: 25px;
-            margin-top: 20px;
-        }
-
-        .btn {
-            background: rgba(255, 255, 255, 0.05);
-            backdrop-filter: blur(10px);
-            padding: 20px 40px;
-            border-radius: 20px;
-            color: white;
-            text-decoration: none;
-            font-weight: 700;
-            border: 1px solid rgba(255,255,255,0.1);
-            transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-            overflow: hidden;
-        }
-
-        .btn:hover {
-            transform: scale(1.1) rotate(1deg);
-            background: rgba(255, 255, 255, 0.15);
-            border-color: var(--accent-glow);
-            box-shadow: 0 0 30px var(--accent-glow);
-        }
+        @keyframes shine { to { background-position: 200% center; } }
 
         .pfp {
             width: 140px;
@@ -187,12 +170,24 @@
 
         .pfp:hover { transform: rotate(10deg) scale(1.1); }
 
-        .hero {
-            display: flex;
-            align-items: center;
-            gap: 30px;
-            justify-content: center;
-            margin-bottom: 20px;
+        .btn {
+            background: rgba(255, 255, 255, 0.05);
+            backdrop-filter: blur(10px);
+            padding: 20px 40px;
+            border-radius: 20px;
+            color: white;
+            text-decoration: none;
+            font-weight: 700;
+            border: 1px solid rgba(255,255,255,0.1);
+            transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            display: inline-block;
+            margin: 10px;
+        }
+
+        .btn:hover {
+            transform: scale(1.1);
+            background: rgba(255, 255, 255, 0.15);
+            box-shadow: 0 0 30px var(--accent-glow);
         }
     </style>
 </head>
@@ -200,30 +195,30 @@
 
     <header class="nav-container">
         <nav class="navbar">
-            <img src="pfp.png" alt="bolt logo" class="nav-logo">
+            <img src="pfp.png" alt="logo" class="nav-logo">
+            
             <div class="nav-links">
                 <a href="#" class="nav-item">Home</a>
                 <a href="#" class="nav-item">Commands</a>
                 <a href="#" class="nav-item">Premium</a>
                 <a href="#" class="nav-item">Support</a>
             </div>
-            <a href="#" class="nav-item" style="display: flex; align-items: center;">
-                <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515a.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0a12.64 12.64 0 0 0-.617-1.25a.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057a19.9 19.9 0 0 0 5.993 3.03a.078.078 0 0 0 .084-.028a14.09 14.09 0 0 0 1.226-1.994a.076.076 0 0 0-.041-.106a13.107 13.107 0 0 1-1.872-.892a.077.077 0 0 1-.008-.128a10.2 10.2 0 0 0 .372-.292a.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.196.373.292a.077.077 0 0 1-.006.127a12.299 12.299 0 0 1-1.873.892a.076.076 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028a19.839 19.839 0 0 0 6.002-3.03a.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03z"/></svg>
+
+            <a href="#" class="discord-icon">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515a.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0a12.64 12.64 0 0 0-.617-1.25a.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057a19.9 19.9 0 0 0 5.993 3.03a.078.078 0 0 0 .084-.028a14.09 14.09 0 0 0 1.226-1.994a.076.076 0 0 0-.041-.106a13.107 13.107 0 0 1-1.872-.892a.077.077 0 0 1-.008-.128a10.2 10.2 0 0 0 .372-.292a.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.196.373.292a.077.077 0 0 1-.006.127a12.299 12.299 0 0 1-1.873.892a.076.076 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028a19.839 19.839 0 0 0 6.002-3.03a.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03z"/></svg>
             </a>
         </nav>
     </header>
 
     <div class="main-wrapper">
-        <div class="hero animate delay-1">
+        <div class="hero">
             <img src="pfp.png" alt="bolt" class="pfp">
             <h1 class="brand">bolt</h1>
         </div>
-
-        <p class="stats animate delay-2" style="font-size: 1.2rem; color: var(--text-muted);">
+        <p style="font-size: 1.2rem; color: var(--text-muted); margin-bottom: 30px;">
             Sustaining <b style="color:white">412</b> users across <b style="color:white">4</b> guilds.
         </p>
-
-        <div class="btn-group animate delay-3">
+        <div class="btn-group">
             <a href="#" class="btn">Invite Bot</a>
             <a href="#" class="btn">Commands</a>
         </div>
